<resources>
    <string name="app_name">lesson№1HW</string>
    <string name="dz1">1</string>
    <string name="dz2">2</string>
    <string name="dz3">3</string>
    <string name="dz4">4</string>
    <string name="dz5">5</string>
    <string name="dz6">6</string>
    <string name="dz7">7</string>
    <string name="dz8">8</string>
    <string name="dz9">9</string>
    <string name="dz10">10</string>
    <string name="dz11">11</string>
    <string name="dz12">12</string>
    <string name="dz13">13</string>
    <string name="dz14">14</string>
    <string name="dz15">15</string>
    <string name="my_home_work">MY HOME WORK</string>
    <string name="by_artsiom_vashkevich">by Artsiom Vashkevich</string>
    <string name="url">Введите URL</string>
    <string name="downloadPicture">Скачать</string>
    <string name="btn_flag">Flag</string>
    <string name="btn_animation">Animation</string>
    <string name="animation_back">Back</string>
    <string name="start">start</string>
    <string name="result_region">Результаты областей</string>
    <string name="minsk_region">Минская область</string>
    <string name="brest_region">Брестская область</string>
    <string name="gomel_region">Гомельская область</string>
    <string name="corn">Зерно</string>
    <string name="_0">0</string>
    <string name="potato">Картофель</string>
    <string name="cabbage">Капуста</string>
    <string name="beet">Свекла</string>

    <string name="welcome">"Добро пожаловать "</string>
    <string name="title">Ругистрация завершена</string>
    <string name="ok">ок</string>
    <string name="sing_in">войти</string>
    <string name="register_text">Регистрация</string>
    <string name="input_name_user">Введите имя пользователя</string>
    <string name="input_password">Введите пароль</string>
    <string name="register_user">зарегистрировать</string>

    <string name="name_buyer">Введите имя</string>
    <string name="kind_of_flower">Выберите вид</string>
    <string name="quantity">Введите колическо</string>
    <string name="packaging_for_flowers">Упаковка для цветов</string>
    <string name="to_order">Заказть</string>
    <string name="buyer">Покупатель:</string>
    <string name="kind">Вид:</string>
    <string name="quantity_info">Количество:</string>
    <string name="packaging">Упаковка:</string>
    <string name="price">Цена:</string>

    <string name="text_first_fragment">С Днем Победы Великой сердечные поздравленья!
Здоровья крепчайшего и отличного настроенья.
Пусть ярко светит солнце всегда над головой.
Пусть в жизни мирной будет стабильность и покой!
Мы Вам желаем долгих лет и доброты,
Счастья океан, душевности и теплоты.</string>
    <string name="postcard">Открытки</string>
    <string name="add_credit_card">Add credit card</string>
    <string name="card_number">Card number</string>
    <string name="valid_n_thru">VALID
                                THRU</string>
    <string name="month">month</string>
    <string name="slash">/</string>
    <string name="year">year</string>
    <string name="cardholder_name">Cardholder name</string>
    <string name="cvv_cvc">cvv/cvc</string>
    <string name="save">save</string>
    <string name="all_credit_cards">all credit cards</string>
    <string name="select_a_payment_system">select a payment system</string>

    <string-array name="payment">
        <item>visa</item>
        <item>master card</item>
        <item>maestro</item>
    </string-array>

</resources>