<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/hw_4">

    <EditText
        android:id="@+id/buyer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/name_buyer"
        app:layout_constraintTop_toTopOf="parent"/>

    <AutoCompleteTextView
        android:id="@+id/plant_species"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/kind_of_flower"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/buyer_name" />

    <ImageView
        android:id="@+id/down_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_down"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/plant_species"
        app:layout_constraintEnd_toEndOf="@+id/plant_species" />

    <EditText
        android:id="@+id/input_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="number"
        android:hint="@string/quantity"
        app:layout_constraintTop_toBottomOf="@+id/plant_species"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/packaging_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="100dp"
        android:text="@string/packaging_for_flowers"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/input_quantity"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/packaging_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_quantity" />

    <Button
        android:id="@+id/btn_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_order"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/packaging_text" />
</androidx.constraintlayout.widget.ConstraintLayout>