<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeWork2Activity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/button_flag"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/textview_button_background"
            android:gravity="center"
            android:text="@string/btn_flag"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="5dp"/>


        <TextView
            android:id="@+id/button_animation"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/textview_button_background"
            android:gravity="center"
            android:text="@string/btn_animation"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/btn_back_hw2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/textview_button_background"
            android:gravity="center"
            android:text="@string/animation_back"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="5dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>